# OK2Ship2.0_Backend

./: .env  docker-compose.yml  readme.md
0.Documents/: development_diary.md
1.Database/: Dockerfile  entrypoint.sh
2.Object_Storage/: Dockerfile  setup-minio.sh
4.Worker_UI/: README.md  package-lock.json  package.json
5.Identity-service/: main.py  (+1 more)
5.Identity-service_API/: .env  main.py  pyproject.toml  readme.md
5.Identity-service_API/api/dependencies/: auth_deps.py
5.Identity-service_API/api/middlewares/: exception_middlewares.py
5.Identity-service_API/api/routes/: router_registration.py
5.Identity-service_API/api/routes/v1/: admin_routes.py  auth_routes.py
5.Identity-service_API/core/: UnitOfWork.py  config.py  container.py  database.py  providers.py
5.Identity-service_API/core/interfaces/: cache_interface.py
5.Identity-service_API/domain/interfaces/repositories/: i_role_repository.py  i_unit_of_work.py  i_user_repository.py
5.Identity-service_API/domain/interfaces/services/: i_auth_service.py  i_token_service.py  i_user_service.py
5.Identity-service_API/domain/models/: generated_models.py
5.Identity-service_API/domain/schemas/: exceptions.py  service_result.py  user_dto.py
5.Identity-service_API/infrastructures/: connections.py
5.Identity-service_API/infrastructures/cache/: redis_service.py
5.Identity-service_API/infrastructures/database/repositories/: role_repository.py  user_repository.py
5.Identity-service_API/reponsitories/: user_repository.py
5.Identity-service_API/services/: auth_service.py  token_service.py  user_service.py
(+67 files in other folders)
