[project]
name = "identity-service-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aioodbc>=0.5.0",
    "bcrypt>=5.0.0",
    "dependency-injector>=4.49.0",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
    "pyjwt>=2.13.0",
    "mypy>=2.1.0",
]

[dependency-groups]
dev = [
    "pyodbc>=5.3.0",
    "sqlacodegen>=4.0.3",
]
